crates/margin-tui/tests/snapshots/ui_snapshots__cursor_scrolls_into_view_at_bottom.snap
---
source: crates/margin-tui/tests/ui_snapshots.rs
expression: "render(&mut state, 80, 12)"
---
 FILES (4)                   21   22      cleanup();
  M src/app.rs       +4 -2   22   23  }
  A docs/NOTES.md    +2 -0        24 +// reviewed
  M assets/logo.png  +0 -0 A docs/NOTES.md  +2 -0
▌ R new/path.txt     +0 -0 @@ -0,0 +1,2 @@
                                   1 +# Notes
                                   2 +remember the milk
                           M assets/logo.png  +0 -0  (binary)
                                 └ binary file: contents not shown
                           R old/path.txt → new/path.txt  +0 -0
                          ▌      └ renamed without content changes
 new/path.txt  23/23
