crates/margin-tui/tests/snapshots/ui_snapshots__empty_changeset.snap
---
source: crates/margin-tui/tests/ui_snapshots.rs
expression: "render(&mut state, 80, 24)"
---
 FILES (0)

                             no changes




















 no changes      j/k  J/K hunk  ]/[ file  / search  f jump  v layout  ? help  q
